Don't do work in ~SigninViewControllerDelegate().

It's not clear what the control flow is here, and previous
attempts to do the right thing by deregistering in it have
yielded crashes.

For now, do a partial revert of e5c44ad5a51d736cea9eea20036917abeeb1ce42 [formerly 0ff0ce07098193d46000c413a8ef976bc5ee493d],
keeping the change in WebContentsModalDialogManager::WillClose().
That change should prevent the original crash that this was
intended to address.

BUG=772745,771872,771142

Change-Id: I34fe8615a758fd12e1c8817651937009261d0b08
Reviewed-on: https://chromium-review.googlesource.com/707199
Reviewed-by: Mike Wittman <wittman@chromium.org>
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: Avi Drissman <avi@chromium.org>
Cr-Commit-Position: refs/heads/master@{#508244}
Former-commit-id: ffc55b2b3676fdc290f8ccfcaa41ebf8be02381b